package fr.fms.Distopia.entities;

/**
 * An enum for the user's role (USER/ ADMIN)
 */
public enum Role {
    USER,
    ADMIN
}
